# telegram_formatter

./: .env-example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  task.md
app/: main.py  mypy.ini  pytest.ini
app/api/: router.py
app/api/v1/: format_router.py  healthcheck_router.py  v1_router.py
app/config/: config.py  logger.py
app/domain/services/: telegram_formatter.py
app/tests/: conftest.py
app/tests/integration/: conftest.py  test_format.py  test_health.py
app/tests/unit/: test_formatter.py
docs/: architecture.md  rules.md
scripts/: run.sh
